# JWChess

./: .gitignore  CMakeLists.txt  README.md
assets/: .gitignore
include/: Application.hpp  DisplayManager.hpp  EventHandler.hpp  Grid.h  Grid.hpp
lib/SDL2/x64/: .gitignore  SDL2gfx.lib
src/: Application.cpp  Grid.cpp  main.cpp
